--- a/css/styles.css
+++ b/css/styles.css
@@ -358,6 +358,8 @@ img {
   margin-bottom: 8px;
 }
 
+/* Socials Styles */
+
 .socials-list {
   display: flex;
   gap: 24px;
@@ -378,6 +380,42 @@ img {
 .socials-link:hover,
 .socials-link:focus {
   background-color: var(--color-ocean);
+}
+/**
+  |============================
+  | CUSTOMERS STYLES
+  |============================
+*/
+.customers-section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.customers-list {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+  justify-content: center;
+}
+
+.customer-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 168px;
+  height: 88px;
+  border: 1px solid var(--color-light-slate);
+  border-radius: 4px;
+
+  fill: var(--color-light-slate);
+}
+
+.customers-icon {
+}
+
+.customer-link:hover,
+.customer-link:focus {
+  border-color: var(--color-ocean);
+  fill: var(--color-ocean);
 }
 
 /**
