--- a/css/styles.css
+++ b/css/styles.css
@@ -529,6 +529,12 @@ img {
   width: calc((100% - 48px) / 3);
 }
 
+.project-item:hover,
+.project-item:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .card-title {
   font-weight: 500;
   font-size: 20px;
