--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,8 @@ img {
 /* Navigation */
 .header {
   border-bottom: 1px solid var(--color-cornflower);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -178,10 +180,12 @@ img {
 }
 .footer-container {
   display: flex;
+  gap: 120px;
+
+  align-items: baseline;
 }
 
 .logo-container {
-  margin-right: 120px;
 }
 
 .text-foot {
@@ -358,7 +362,7 @@ img {
 .examples-section {
   padding-bottom: 120px;
 }
-/* Our team */
+/* Section 3 -  Our team */
 
 .li-title {
   font-weight: 500;
@@ -387,13 +391,13 @@ img {
 .team-card {
   background-color: var(--color-white);
   flex-basis: calc((100% - 3 * 24px) / 4);
-}
-
-.card-content {
-  padding: 32px 16px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
+}
+
+.card-content {
+  padding: 32px 0;
 }
 
 .member-name {
@@ -441,6 +445,11 @@ img {
   padding-top: 120px;
   padding-bottom: 120px;
 }
+
+.customers-title {
+  line-height: 1.1;
+}
+
 .customers-list {
   display: flex;
   gap: 24px;
@@ -457,13 +466,16 @@ img {
   border: 1px solid var(--color-light-slate);
   border-radius: 4px;
 
-  fill: var(--color-light-slate);
+  color: var(--color-light-slate);
 }
 
 .customer-link:hover,
 .customer-link:focus {
   border-color: var(--color-ocean);
-  fill: var(--color-ocean);
+  color: var(--color-ocean);
+}
+.customers-icon {
+  fill: currentColor;
 }
 
 /**
@@ -529,12 +541,6 @@ img {
   width: calc((100% - 48px) / 3);
 }
 
-.project-item:hover,
-.project-item:focus {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
 .card-title {
   font-weight: 500;
   font-size: 20px;
@@ -551,4 +557,14 @@ img {
   border-bottom: 1px solid var(--color-cornflower);
   border-left: 1px solid var(--color-cornflower);
   border-right: 1px solid var(--color-cornflower);
+}
+
+.pc-link {
+  display: block;
+}
+
+.pc-link:hover,
+.pc-link:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
